<resources>
	<string name="app_name">System Usage</string>
	<string name="app_pref_name">System Usage</string>

	<string name="sh_failed">Failed running shell command</string>

	<string name="notif_loading">Gathering system stat…</string>

	<string name="cpu_notif_title_overall" formatted="false">CPU: %d%%</string>
	<string name="cpu_notif_content_overall" formatted="false">%d of %d cores enabled</string>
	<string name="cpu_notif_title" formatted="false">Core %d: %d%%</string>
	<string name="cpu_notif_title_disabled" formatted="false">Core %d disabled</string>
	<string name="cpu_notif_title_error">Error gathering CPU stat</string>

	<string name="mem_notif_title" formatted="false">Memory: %d%%</string>
	<string name="mem_notif_content" formatted="false">%d MB in use, %d MB remaining</string>
	<string name="mem_notif_title_error">Error gathering memory stat</string>

	<string name="net_tx_notif_title" formatted="false">Outgoing: %d%%</string>
	<string name="net_rx_notif_title" formatted="false">Incoming: %d%%</string>
	<string name="net_notif_title_disabled" formatted="false">Network not available</string>
	<string name="net_notif_title_error">Error gathering network stat</string>

	<string name="disk_read_notif_title" formatted="false">Disk read: %d%%</string>
	<string name="disk_write_notif_title" formatted="false">Disk write: %d%%</string>
	<string name="disk_notif_title_error">Error gathering disk I/O stat</string>

	<string name="storage_notif_title" formatted="false">Internal storage: %d%%</string>
	<string name="storage_notif_ext_title" formatted="false">External storage: %d%%</string>
	<string name="storage_notif_content" formatted="false">%.1f GB in use, %.1f GB remaining</string>
	<string name="storage_notif_title_error">Error gathering storage stat</string>

	<string name="notif_usage_channel_name">Usage Indicator</string>
	<string name="notif_usage_channel_description">Show the current system usage</string>

	<string name="setup_wizard_greeting_message">Nice to meet you &#x263a;</string>
	<string name="setup_wizard_greeting_detail_message">We\'ll help you to configure this app to your needs</string>
	<string name="setup_wizard_greeting_theme_switch">Dark theme</string>

	<string name="setup_wizard_monitor_message">Select metrics</string>
	<string name="setup_wizard_monitor_cpu_switch">CPU</string>
	<string name="setup_wizard_monitor_mem_switch">Memory</string>
	<string name="setup_wizard_monitor_net_switch">Network</string>
	<string name="setup_wizard_monitor_disk_switch">Disk</string>

	<string name="setup_wizard_net_mobile_message">Tailor to your data network</string>
	<string name="setup_wizard_net_mobile_detail_message">To get an accurate usage figure, select and tweak the value to best describe your mobile data network capacity</string>
	<string name="setup_wizard_net_wifi_message">Tailor to your WiFi network</string>
	<string name="setup_wizard_net_wifi_detail_message">To get an accurate usage figure, tweak the value to best describe your WiFi network capacity</string>
	<string name="setup_wizard_net_dl_label">Incoming</string>
	<string name="setup_wizard_net_ul_label">Outgoing</string>

	<string name="setup_wizard_disk_message">Tailor to your storage</string>
	<string name="setup_wizard_disk_detail_message">To get an accurate usage figure, tweak the value to best describe your storage read/write capacity</string>
	<string name="setup_wizard_disk_read_label">Read</string>
	<string name="setup_wizard_disk_write_label">Write</string>

	<string name="setup_wizard_done_message">Done!</string>

	<string name="pref_file" translatable="false">com.nkming.cpuusage</string>

	<string name="pref_run_setup_wizard_key" translatable="false">run_setup_wizard</string>
	<string name="pref_last_version_key" translatable="false">last_version</string>

	<string name="pref_cpu_notification_category_key" translatable="false">cpu_notification</string>
	<string name="pref_cpu_notification_category">CPU Notification</string>
	<string name="pref_mem_notification_category">Memory Notification</string>
	<string name="pref_net_notification_category">Network Notification</string>
	<string name="pref_disk_notification_category_key" translatable="false">disk_notification</string>
	<string name="pref_disk_notification_category">Disk I/O Notification</string>
	<string name="pref_storage_notification_category">Storage Notification</string>
	<string name="pref_misc_category">Misc</string>

	<string name="pref_interval_mul_key" translatable="false">interval_mul</string>
	<string name="pref_interval_mul_title">Update interval</string>

	<string name="pref_enable_key" translatable="false">enable</string>
	<string name="pref_enable_title">Enable</string>

	<string name="pref_high_priority_key" translatable="false">high_priority</string>
	<string name="pref_high_priority_title">High priority</string>
	<string name="pref_high_priority_summary_on">High priority notifications would show first</string>
	<string name="pref_high_priority_summary_off">Low priority notifications would show last</string>

	<string name="pref_autorun_key" translatable="false">auto_run</string>
	<string name="pref_autorun_title">Autorun on boot</string>

	<string name="pref_lock_screen_key" translatable="false">lock_screen</string>
	<string name="pref_lock_screen_title">Adjust visibility on lock screen</string>
	<string name="pref_lock_screen_summary">You could disable the notifications from being shown on lock screen in Android Settings</string>

	<string name="pref_optimize_battery_key" translatable="false">optimize_battery</string>
	<string name="pref_optimize_battery_title">Optimize battery usage</string>
	<string name="pref_optimize_battery_summary">Halting app when device screen is off. Recommended to keep enabled unless weird things happen</string>

	<string name="pref_enable_cpu_notif_key" translatable="false">enable_cpu_notif</string>
	<string name="pref_enable_cpu_notif_title">Enable</string>

	<string name="pref_overall_cpu_key" translatable="false">overall_cpu</string>
	<string name="pref_overall_cpu_title">Show overall stat</string>
	<string name="pref_overall_cpu_summary_on">Showing a single combined stat</string>
	<string name="pref_overall_cpu_summary_off">Showing multiple stats for each core</string>

	<string name="pref_cpu_oreo_note_key" translatable="false">cpu_oreo_note</string>
	<string name="pref_cpu_oreo_note_title">Compatibility note</string>
	<string name="pref_cpu_oreo_note_summary">CPU usage info has limited accuracy on Android 8.0+ as some system resources needed are no longer accessible</string>

	<string name="pref_enable_mem_notif_key" translatable="false">enable_mem_notif</string>
	<string name="pref_enable_mem_notif_title">Enable</string>

	<string name="pref_enable_net_notif_key" translatable="false">enable_net_notif</string>
	<string name="pref_enable_net_notif_title">Enable</string>

	<string name="pref_net_mobile_template_key" translatable="false">net_mobile_template</string>
	<string name="pref_net_mobile_template_title">Mobile network template</string>
	<string name="pref_net_mobile_template_summary">Apply predefined settings for a mobile network. However actual capacities depend on carrier and data plan. Tweak values below to better represent yours</string>
	<string-array name="pref_net_mobile_templates" translatable="false">
		<item>LTE</item>
		<item>WiMAX</item>
		<item>HSPA+</item>
		<item>HSPA</item>
		<item>3G</item>
		<item>EDGE</item>
		<item>2G</item>
	</string-array>

	<string name="pref_net_mobile_dl_key" translatable="false">net_mobile_dl</string>
	<string name="pref_net_mobile_dl_title">Mobile downlink capacity</string>

	<string name="pref_net_mobile_ul_key" translatable="false">net_mobile_ul</string>
	<string name="pref_net_mobile_ul_title">Mobile uplink capacity</string>

	<string name="pref_net_wifi_dl_key" translatable="false">net_wifi_dl</string>
	<string name="pref_net_wifi_dl_title">Wi-Fi downlink capacity</string>

	<string name="pref_net_wifi_ul_key" translatable="false">net_wifi_ul</string>
	<string name="pref_net_wifi_ul_title">Wi-Fi uplink capacity</string>

	<string-array name="pref_net_throughput_units">
		<item>kbit/s</item>
		<item>Mbit/s</item>
	</string-array>

	<string name="pref_enable_disk_notif_key" translatable="false">enable_disk_notif</string>
	<string name="pref_enable_disk_notif_title">Enable</string>

	<string name="pref_disk_read_key" translatable="false">disk_read</string>
	<string name="pref_disk_read_title">Disk read capacity</string>

	<string name="pref_disk_write_key" translatable="false">disk_write</string>
	<string name="pref_disk_write_title">Disk write capacity</string>

	<string-array name="pref_disk_throughput_units">
		<item>KByte/s</item>
		<item>MByte/s</item>
	</string-array>

	<string name="pref_disk_stat_not_supported_key" translatable="false">disk_not_supported</string>
	<string name="pref_disk_stat_not_supported_summary">Disk I/O stat is not available on Android 8.0 or up</string>

	<string name="pref_enable_storage_notif_key" translatable="false">enable_storage_notif</string>
	<string name="pref_enable_storage_notif_title">Enable</string>

	<string name="pref_dark_theme_key" translatable="false">dark_theme</string>
	<string name="pref_dark_theme_title">Dark theme</string>
	<string name="pref_dark_theme_summary_on">Using dark theme</string>
	<string name="pref_dark_theme_summary_off">Using light theme</string>

	<string name="pref_about_category">About</string>
	<string name="about_version_key" translatable="false">version</string>
	<string name="about_version_title">Version</string>
	<string name="about_source_title">Source code</string>
	<string name="about_source_summary" translatable="false">https://github.com/nkming2/system-usage</string>

	<string name="about_translator_key" translatable="false">translator</string>
	<string name="about_translator_title">Translator</string>
	<string name="about_translator_credit"></string>
	<string name="about_translator_help" translatable="false">Help translating to your language \u263A</string>
	<string name="about_translator_help_url" translatable="false">https://github.com/nkming2/system-usage/blob/master/src/main/res/values/strings.xml</string>
</resources>
