<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<com.nkming.utils.preference.SwitchPreferenceFix
		android:key="@string/pref_enable_key"
		android:title="@string/pref_enable_title"
		android:defaultValue="true" />

	<com.nkming.utils.preference.SeekBarPreference
		android:key="@string/pref_interval_mul_key"
		android:dependency="@string/pref_enable_key"
		android:title="@string/pref_interval_mul_title"
		app:min="2"
		app:max="20"
		android:defaultValue="4" />

	<com.nkming.utils.preference.SwitchPreferenceFix
		android:key="@string/pref_high_priority_key"
		android:dependency="@string/pref_enable_key"
		android:title="@string/pref_high_priority_title"
		android:summaryOn="@string/pref_high_priority_summary_on"
		android:summaryOff="@string/pref_high_priority_summary_off"
		android:defaultValue="false" />

	<Preference
		android:key="@string/pref_lock_screen_key"
		android:dependency="@string/pref_enable_key"
		android:title="@string/pref_lock_screen_title"
		android:summary="@string/pref_lock_screen_summary"
		android:persistent="false" />

	<com.nkming.utils.preference.SwitchPreferenceFix
		android:key="@string/pref_autorun_key"
		android:dependency="@string/pref_enable_key"
		android:title="@string/pref_autorun_title"
		android:defaultValue="true" />

	<com.nkming.utils.preference.SwitchPreferenceFix
		android:key="@string/pref_optimize_battery_key"
		android:dependency="@string/pref_enable_key"
		android:title="@string/pref_optimize_battery_title"
		android:summary="@string/pref_optimize_battery_summary"
		android:defaultValue="true" />

	<PreferenceCategory
		android:key="@string/pref_cpu_notification_category_key"
		android:title="@string/pref_cpu_notification_category">
		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_enable_cpu_notif_key"
			android:dependency="@string/pref_enable_key"
			android:title="@string/pref_enable_cpu_notif_title"
			android:defaultValue="true" />

		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_overall_cpu_key"
			android:dependency="@string/pref_enable_cpu_notif_key"
			android:title="@string/pref_overall_cpu_title"
			android:summaryOn="@string/pref_overall_cpu_summary_on"
			android:summaryOff="@string/pref_overall_cpu_summary_off"
			android:defaultValue="true" />

		<Preference
			android:key="@string/pref_cpu_oreo_note_key"
			android:title="@string/pref_cpu_oreo_note_title"
			android:summary="@string/pref_cpu_oreo_note_summary" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_mem_notification_category">
		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_enable_mem_notif_key"
			android:dependency="@string/pref_enable_key"
			android:title="@string/pref_enable_mem_notif_title"
			android:defaultValue="true" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_net_notification_category">
		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_enable_net_notif_key"
			android:dependency="@string/pref_enable_key"
			android:title="@string/pref_enable_net_notif_title"
			android:defaultValue="true" />

		<ListPreference
			android:key="@string/pref_net_mobile_template_key"
			android:dependency="@string/pref_enable_net_notif_key"
			android:title="@string/pref_net_mobile_template_title"
			android:summary="@string/pref_net_mobile_template_summary"
			android:entries="@array/pref_net_mobile_templates"
			android:entryValues="@array/pref_net_mobile_templates" />

		<com.nkming.sysusage.NetThroughputPreference
			android:key="@string/pref_net_mobile_dl_key"
			android:dependency="@string/pref_enable_net_notif_key"
			android:title="@string/pref_net_mobile_dl_title"
			android:defaultValue="1000000" />

		<com.nkming.sysusage.NetThroughputPreference
			android:key="@string/pref_net_mobile_ul_key"
			android:dependency="@string/pref_enable_net_notif_key"
			android:title="@string/pref_net_mobile_ul_title"
			android:defaultValue="1000000" />

		<com.nkming.sysusage.NetThroughputPreference
			android:key="@string/pref_net_wifi_dl_key"
			android:dependency="@string/pref_enable_net_notif_key"
			android:title="@string/pref_net_wifi_dl_title"
			android:defaultValue="100000000" />

		<com.nkming.sysusage.NetThroughputPreference
			android:key="@string/pref_net_wifi_ul_key"
			android:dependency="@string/pref_enable_net_notif_key"
			android:title="@string/pref_net_wifi_ul_title"
			android:defaultValue="100000000" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_disk_notification_category">
		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_enable_disk_notif_key"
			android:dependency="@string/pref_enable_key"
			android:title="@string/pref_enable_disk_notif_title"
			android:defaultValue="true" />

		<com.nkming.sysusage.DiskThroughputPreference
			android:key="@string/pref_disk_read_key"
			android:dependency="@string/pref_enable_disk_notif_key"
			android:title="@string/pref_disk_read_title"
			android:defaultValue="20971520" />

		<com.nkming.sysusage.DiskThroughputPreference
			android:key="@string/pref_disk_write_key"
			android:dependency="@string/pref_enable_disk_notif_key"
			android:title="@string/pref_disk_write_title"
			android:defaultValue="10485760" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_misc_category">
		<com.nkming.utils.preference.SwitchPreferenceFix
			android:key="@string/pref_dark_theme_key"
			android:title="@string/pref_dark_theme_title"
			android:summaryOn="@string/pref_dark_theme_summary_on"
			android:summaryOff="@string/pref_dark_theme_summary_off"
			android:defaultValue="false" />
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_about_category">

		<Preference
			android:key="@string/about_version_key"
			android:title="@string/about_version_title" />

		<Preference
			android:title="@string/about_source_title"
			android:summary="@string/about_source_summary">

			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/about_source_summary" />
		</Preference>

		<Preference
			android:key="@string/about_translator_key"
			android:title="@string/about_translator_title"
			android:summary="@string/about_translator_credit" />
	</PreferenceCategory>
</PreferenceScreen>
