<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="@dimen/setup_wizard_next_margin_top"
		android:layout_marginBottom="@dimen/setup_wizard_next_margin_bottom"
		android:src="@drawable/ic_arrow_forward_white_24dp" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/next">

		<View
			android:id="@+id/title_area"
			android:layout_width="match_parent"
			android:layout_height="@dimen/setup_wizard_title_height"
			android:background="?colorPrimary" />

		<TextView
			android:id="@+id/title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/title_area"
			android:padding="16dp"
			android:textAppearance="@style/TextAppearance.AppCompat.Headline"
			android:textColor="@color/md_white_1000"
			android:text="@string/setup_wizard_net_wifi_message" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/title_area">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/detail_message"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginTop="32dp"
					android:layout_centerHorizontal="true"
					android:textAppearance="@style/TextAppearance.AppCompat.Body1"
					android:gravity="center_horizontal"
					android:text="@string/setup_wizard_net_wifi_detail_message" />

				<RelativeLayout
					android:id="@+id/dl_container"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/detail_message"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginTop="32dp">

					<TextView
						android:id="@+id/dl_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_alignParentLeft="true"
						android:layout_centerVertical="true"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
						android:textColor="?android:textColorPrimary"
						android:text="@string/setup_wizard_net_dl_label" />

					<Spinner
						android:id="@+id/dl_unit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:entries="@array/pref_net_throughput_units" />

					<EditText
						android:id="@+id/dl_input"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@id/dl_label"
						android:layout_toRightOf="@id/dl_label"
						android:layout_toStartOf="@id/dl_unit"
						android:layout_toLeftOf="@id/dl_unit"
						android:layout_marginStart="32dp"
						android:layout_marginLeft="32dp"
						android:layout_marginEnd="8dp"
						android:layout_marginRight="8dp"
						android:layout_centerVertical="true"
						android:inputType="numberDecimal" />
				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/ul_container"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/dl_container"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginTop="16dp">

					<TextView
						android:id="@+id/ul_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_alignParentLeft="true"
						android:layout_centerVertical="true"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium"
						android:textColor="?android:textColorPrimary"
						android:text="@string/setup_wizard_net_ul_label" />

					<Spinner
						android:id="@+id/ul_unit"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:entries="@array/pref_net_throughput_units" />

					<EditText
						android:id="@+id/ul_input"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_toEndOf="@id/ul_label"
						android:layout_toRightOf="@id/ul_label"
						android:layout_toStartOf="@id/ul_unit"
						android:layout_toLeftOf="@id/ul_unit"
						android:layout_marginStart="32dp"
						android:layout_marginLeft="32dp"
						android:layout_marginEnd="8dp"
						android:layout_marginRight="8dp"
						android:layout_centerVertical="true"
						android:inputType="numberDecimal" />
				</RelativeLayout>
			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</RelativeLayout>
